Updated UserManager file